--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,71 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #F6F7F8;
+  height: 100vh;
+}
+.main{
+  margin: 20px;
+  padding: 20px;
+  border-radius: 20px;
+  height: 500px;
+  width: 600px;
+  background-color: #ffffff;
+}
+.empty-cell{
+  color: #D3D3D3;
+  
+}
+.container{
+  
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.flex-col{
+  flex-direction: column;
 }
 
-.App-link {
-  color: #61dafb;
+.gap-1{
+  gap: 1em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.data-cell{
+  box-sizing: border-box;
+  width: 80px;
+  height: 50px;
+  font-size: 1em;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #e3e3e3;
+  border: 1px solid #c4c2c2;
+}
+.header-cell{
+  box-sizing: border-box;
+  height: 25px;
+  background-color: #a6a4a4;
+  border: 1px solid #c4c2c2;
+
+}
+
+.red{
+  color: red;
+}
+.gray{
+  color:gray;
+}
+
+.heading{
+  width: 557px;
+  display: flex;
+  font-weight: 500;
+  align-items: center;
+  justify-content: center;
+  height: 25px;
+
+  background-color: #e3e3e3;
+  border: 1px solid #c4c2c2;
 }
