--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   align-items: center;
   background-color: #F6F7F8;
   height: 100vh;
+
 }
 .main{
   margin: 20px;
@@ -11,6 +12,9 @@
   border-radius: 20px;
   height: 500px;
   width: 600px;
+  display: flex;
+  flex-direction: column;
+  gap:2em;
   background-color: #ffffff;
 }
 .empty-cell{
@@ -68,4 +72,13 @@
 
   background-color: #e3e3e3;
   border: 1px solid #c4c2c2;
+}
+.blue{
+  color: rgb(0, 147, 226);
+  font-size: larger;
+}
+.title{
+  font-size: x-large;
+  font-weight: 600;
+  
 }
